# agent-flow

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  build_output.txt
autogen/: flows.yaml
configs/: graph_config_auto_routing.json  graph_config_food_analysis.json  graph_config_legal_flow.json  graph_config_marketing_generator.json
docs/: JSON配置驱动的工具使用.md  LLM目录重构完成总结.md  README.md  enhancement_stage0_overview.md  json_workflow_configuration.md  phase1_flow_extension.md  phase2_agent_manifest.md  phase3_tool_extension.md  phase4_schema_and_errors.md  phase5_docs_and_demos.md  phase5_plugin_ecosystem.md  下载工具配置示例.md  代码规范和最佳实践.md  代码评估报告.md  内置工具使用说明.md  完整使用指南.md  工作流执行分析.md  工具系统架构.md  应用运行说明.md  智能法律案件评估与文书生成系统设计.md  智能营销内容生成系统设计.md  流式输出实现说明.md  清理总结.md  目录结构检查报告.md  自动和手动路由说明.md  自动路由实现方案.md  路由和编排功能说明.md  配置API_Key指南.md  项目文件结构说明.md  食物识别分析应用设计.md
examples/: README.md  auto_routing_workflow.rs  decision_workflow.rs  food_analysis_app.rs  food_vision_analysis.rs  join_workflow.rs  json_workflow_example.rs  legal_flow_app.rs  loop_workflow.rs  marketing_generator.rs  minimal_flow.rs  multi_agent_conversation.rs  routing_workflow.rs  simple_chain_workflow.rs
scripts/: regression.sh
src/: error.rs  lib.rs
src/agent/: agent.rs  factory.rs  manifest.rs  message.rs  mod.rs  registry.rs
src/autogen/: mod.rs  yaml.rs
src/cli/: mod.rs
src/flow/: mod.rs  (+7 more)
tests/: agent_manifest_tests.rs  agent_typed_io_tests.rs  complex_diet_masterplan_tests.rs  diet_flow_tests.rs  flow_context_scope_tests.rs  flow_dsl_unit_tests.rs  food_vision_analysis_tests.rs  json_config_flow_tests.rs  plugin_registry_tests.rs  pure_rust_volume_tests.rs  qwen_api_tests.rs  runtime_tests.rs  schema_tests.rs  structured_message_tests.rs  test_build_phases.sh  test_compile_check.rs  test_message_parser.rs  test_prompt_builder.rs  tool_flow_integration_tests.rs  tool_manifest_tests.rs  tool_orchestrator_tests.rs
(+96 files in other folders)
