[package]
name = "agentflow"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
async-trait = "0.1"
futures = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "time"] }
thiserror = "1"
tracing = { version = "0.1", features = ["attributes"] }
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
parking_lot = "0.12"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false, optional = true }
image = { version = "0.24", default-features = false, features = ["png"] }

[dependencies.redis]
version = "0.25"
optional = true
features = ["tokio-comp", "aio"]

[features]
default = ["memory-store"]
memory-store = []
redis-store = ["redis"]
openai-client = ["reqwest"]
