[package]
name = "agentflow"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
async-trait = "0.1"
futures = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "time"] }
thiserror = "2.0.17"
tracing = { version = "0.1", features = ["attributes"] }
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
parking_lot = "0.12"
reqwest = { version = "0.12", features = ["json", "rustls-tls", "multipart"], default-features = false }
image = { version = "0.25.8", default-features = false, features = ["png"] }
clap = { version = "4", features = ["derive"] }
base64 = "0.22"
once_cell = "1.19"

[dependencies.redis]
version = "0.32.7"
optional = true
features = ["tokio-comp", "aio"]

[features]
default = ["memory-store"]
memory-store = []
redis-store = ["redis"]
openai-client = []

[dev-dependencies]
tempfile = "3"
